// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlannerForm /> renders with completed fields 1`] = `
<Component
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Choose Course:
  </Styled(H3)>
  <FormPicker
    items={
      Array [
        "CSCE 2004 - Programming Foundations I",
        "CSCE 2014 - Programming Foundations II",
        "CSCE 2114 - Digital Design",
        "CSCE 2214 - Computer Organization",
        "CSCE 3193 - Programming Paradigms",
        "CSCE 3193H - Honors Programming Paradigms",
        "CSCE 3213 - Cluster Computing",
        "CSCE 3513 - Software Engineering",
        "CSCE 3613 - Operating Systems",
        "CSCE 3613H - Honors Operating Systems",
        "CSCE 3953 - System Synthesis and Modeling",
        "CSCE 4013 - Special Topics",
        "CSCE 4023H - Honors Special Topics",
        "CSCE 4613 - Artificial Intelligence",
        "CSCE 4623 - Mobile Programming",
        "CSCE 4753 - Computer Networks",
        "CSCE 491VH - Honors Thesis",
        "CSCE 5063 - Machine Learning",
      ]
    }
    onValueChange={[Function]}
    placeholder="Select Course"
    selectedValue={[Function]}
  />
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Choose Term Type:
  </Styled(H3)>
  <FormPicker
    items={
      Array [
        "Spring Intersession",
        "Spring Semester",
        "Summer Intersession",
        "Summer 10 Week Session",
        "Summer 5 Week Session 1",
        "Summer 5 Week Session 2",
        "Summer 8 Week Session",
        "Fall Intersession",
        "Fall Semester",
      ]
    }
    onValueChange={[Function]}
    placeholder="Select Term Type"
    selectedValue={[Function]}
  />
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Choose Term Year:
  </Styled(H3)>
  <FormPicker
    items={
      Array [
        2000,
        2001,
        2002,
      ]
    }
    onValueChange={[Function]}
    placeholder="Select Term Year"
    selectedValue={[Function]}
  />
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    GPA Earned:
  </Styled(H3)>
  <Styled(Item)
    error={false}
  >
    <Styled(Input)
      keyboardType="decimal-pad"
      onChangeText={[Function]}
      placeholder="Enter Grade"
      style={
        Object {
          "fontSize": 15,
          "marginLeft": "4%",
        }
      }
      value={4}
    />
    <Styled(Icon)
      name="checkmark-circle"
    />
  </Styled(Item)>
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Units Earned:
  </Styled(H3)>
  <Styled(Item)
    error={false}
  >
    <Styled(Input)
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Enter Units"
      style={
        Object {
          "fontSize": 15,
          "marginLeft": "4%",
        }
      }
      value={4}
    />
    <Styled(Icon)
      name="checkmark-circle"
    />
  </Styled(Item)>
</Component>
`;

exports[`<PlannerForm /> renders with empty fields 1`] = `
<Component
  style={
    Object {
      "alignContent": "center",
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Choose Course:
  </Styled(H3)>
  <FormPicker
    items={
      Array [
        "CSCE 2004 - Programming Foundations I",
        "CSCE 2014 - Programming Foundations II",
        "CSCE 2114 - Digital Design",
        "CSCE 2214 - Computer Organization",
        "CSCE 3193 - Programming Paradigms",
        "CSCE 3193H - Honors Programming Paradigms",
        "CSCE 3213 - Cluster Computing",
        "CSCE 3513 - Software Engineering",
        "CSCE 3613 - Operating Systems",
        "CSCE 3613H - Honors Operating Systems",
        "CSCE 3953 - System Synthesis and Modeling",
        "CSCE 4013 - Special Topics",
        "CSCE 4023H - Honors Special Topics",
        "CSCE 4613 - Artificial Intelligence",
        "CSCE 4623 - Mobile Programming",
        "CSCE 4753 - Computer Networks",
        "CSCE 491VH - Honors Thesis",
        "CSCE 5063 - Machine Learning",
      ]
    }
    onValueChange={[Function]}
    placeholder="Select Course"
    selectedValue={[Function]}
  />
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Choose Term Type:
  </Styled(H3)>
  <FormPicker
    items={
      Array [
        "Spring Intersession",
        "Spring Semester",
        "Summer Intersession",
        "Summer 10 Week Session",
        "Summer 5 Week Session 1",
        "Summer 5 Week Session 2",
        "Summer 8 Week Session",
        "Fall Intersession",
        "Fall Semester",
      ]
    }
    onValueChange={[Function]}
    placeholder="Select Term Type"
    selectedValue={[Function]}
  />
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Choose Term Year:
  </Styled(H3)>
  <FormPicker
    items={
      Array [
        2000,
        2001,
        2002,
      ]
    }
    onValueChange={[Function]}
    placeholder="Select Term Year"
    selectedValue={[Function]}
  />
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    GPA Earned:
  </Styled(H3)>
  <Styled(Item)
    error={true}
  >
    <Styled(Input)
      keyboardType="decimal-pad"
      onChangeText={[Function]}
      placeholder="Enter Grade"
      style={
        Object {
          "fontSize": 15,
          "marginLeft": "4%",
        }
      }
      value=""
    />
    <Styled(Icon)
      name="close-circle"
    />
  </Styled(Item)>
  <Styled(H3)
    style={
      Object {
        "color": "darkred",
        "marginLeft": "4%",
        "marginTop": "5%",
      }
    }
  >
    Units Earned:
  </Styled(H3)>
  <Styled(Item)
    error={true}
  >
    <Styled(Input)
      keyboardType="number-pad"
      onChangeText={[Function]}
      placeholder="Enter Units"
      style={
        Object {
          "fontSize": 15,
          "marginLeft": "4%",
        }
      }
      value=""
    />
    <Styled(Icon)
      name="close-circle"
    />
  </Styled(Item)>
</Component>
`;
